--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1
 Date: 2019-11-01
 Author: Marcelo S. Perlin
 Maintainer: Marcelo S. Perlin <marceloperlin@gmail.com>
-Description: Includes functions for retrieving data used in the book and more. 
+Description: Includes functions for retrieving files from the book and building exercises.
 License: GPL-2
 BugReports: https://github.com/msperlin/afedR/issues
 URL: https://github.com/msperlin/afedR/
