--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: afedR
 Type: Package
-Title: Functions for book "Analyzing Financial and Economical Data with R"
+Title: Functions for Book "Analyzing Financial and Economical Data with R"
 Version: 0.1
 Date: 2019-11-01
 Author: Marcelo S. Perlin
 Maintainer: Marcelo S. Perlin <marceloperlin@gmail.com>
-Description: Includes functions for retrieving files from the book and building exercises.
+Description: Includes functions for retrieving data files from the book, 
+    copying other files and building exercises.
 License: GPL-2
 BugReports: https://github.com/msperlin/afedR/issues
 URL: https://github.com/msperlin/afedR/
